--- a/css/style.css
+++ b/css/style.css
@@ -1,142 +1,196 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-*{
-    margin:0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 
-header{
-    background-image: url("../assets/backimage.png") !important;
-    background-repeat: no-repeat;
-    background-size: 46%;
+header {
+  background-image: url("../assets/backimage.png") !important;
+  background-repeat: no-repeat;
+  background-size: 46%;
+  height: 10vh;
 }
 
+.logo > img {
+  height: 5vh;
+}
 /* Navbar */
-nav{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-    width: 100%;
-    
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  width: 100%;
 }
 
-li{
-    list-style-type: none;
-    display: inline;
-    padding: 0 10px;
-    
+li {
+  list-style-type: none;
+  display: inline;
+  padding: 0 10px;
 }
 
-a{
-    text-decoration: none;
-    color: #132C33;
+a {
+  text-decoration: none;
+  color: #132c33;
 }
 
-a:hover{
-    border-bottom: 1px solid #C0C0C0;
-    border-bottom-width: 2px;
+a:hover {
+  border-bottom: 1px solid #c0c0c0;
+  border-bottom-width: 2px;
 }
 
-.login-Btn{
-    border: 1px solid #132C33;
-    border-radius: 30px;
-    padding: 3px 15px;
-    /* border-bottom-width: 0; */
+.login-Btn {
+  border: 1px solid #132c33;
+  border-radius: 30px;
+  padding: 3px 15px;
+  /* border-bottom-width: 0; */
 }
 
-.joinUs-Btn{
-    border-radius: 30px;
-    padding: 3px 15px;
-    background-color: #132C33;
-    margin-left: 10px;
+.joinUs-Btn {
+  border-radius: 30px;
+  padding: 3px 15px;
+  background-color: #132c33;
+  margin-left: 10px;
 }
 
-.joinUs-Btn a{
-    color: white;
-    border-bottom-width: 0;
+.joinUs-Btn a {
+  color: white;
+  border-bottom-width: 0;
 }
-
 
 /* Hero */
-#welcome{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 25px;
-    
+#welcome {
+  display: flex;
+  align-items: center;
+  padding: 10px 25px;
+  justify-content: space-between;
 }
 
-.welcome-hero{
-    width: 50vw;
-    margin-right: 150px;
-    margin-left: 35px;
-    height: 30em;
-    /* padding: 0 50px; */
+.welcome-hero {
+  width: 50vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+  /* padding: 0 50px; */
 }
 
-
-.welcome-hero h1{
-    font-size: 54px;
+.welcome-hero h1 {
+  font-size: 2.8em;
 }
 
-.welcome-hero p{
-    font-size: 18px;
-    margin-top: 30px;
+.welcome-hero p {
+  font-size: 18px;
+  margin-top: 30px;
 }
 
-.welcome-hero button{
-    border: none;
-    border-radius: 30px;
-    padding: 7px 35px;
-    background-color: #132C33;
-    margin-top: 10px;
-    color: white;
+.welcome-hero button {
+  border: none;
+  border-radius: 30px;
+  padding: 7px 35px;
+  background-color: #132c33;
+  margin-top: 10px;
+  color: white;
+}
+.hero-img {
+  flex: 1;
 }
 
-.hero-img img{
-    height: 400px;
-    width: 700px;
-    z-index: 1;
-    background-color: #F7F7F7; 
+.hero-img img {
+  height: 400px;
+  width: 700px;
+  z-index: 1;
+  background-color: #f7f7f7;
+}
+.flip-card {
+  background-color: transparent;
+  width: 100vw;
+  height: auto;
+  border: 1px solid #f1f1f1;
+  perspective: 1000px;
+  margin-bottom: 10vh;
 }
 
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+  position: relative;
+  width: 100vw;
+  height: 60vh;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+
+/* Style the front side (fallback if image is missing) */
+
+/* Style the back side */
+.flip-card-back {
+  transform: rotateY(180deg);
+}
 
 /* Main page */
-#main-section{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 5px 35px;
-    margin: 0 25px;
+#main-section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px 35px;
+  margin: 0 25px;
 }
 
-.main-image img{
-    height: 400px;
+.main-image img {
+  height: 400px;
+  flex: 1;
 }
 
 /* Register Section */
-#register{
-    border-left: 2px solid #DAD8E7;
-    padding: 30px;
+#register {
+  border-left: 2px solid #dad8e7;
+  padding: 30px;
+  width: 50vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-#register h2{
-    font-size: 40px;
-    padding: 10px 0;
+#register h2 {
+  font-size: 2em;
+  padding: 5px 0;
+  margin-top: 0;
 }
 
-#register p{
-    font-size: 10px;
-    color: #132C33;
-    padding-bottom: 10px;
+#register p {
+  font-size: 10px;
+  color: #132c33;
+  padding-bottom: 10px;
 }
-#register input{
+
+#register .register-div {
+  max-width: 40vw;
+}
+/* #register input{
     padding: 8px 2em 8px 1.5em ;
-    margin: 5px 15px;
+    margin: 5px 5px;
     border-radius: 30px;
     border: 1px solid #132C33;
+    width: 20vw;
 }
 
 #register input:focus{
@@ -152,8 +206,8 @@ a:hover{
 #register .name label{
     margin-right: 85px;
     padding: 10 30px 10px 0 ;
-}
-
+} */
+/* 
 #register .email{
     padding-bottom: 10px;
 }
@@ -181,39 +235,65 @@ a:hover{
 }
 
 #register .password label{
-    margin-right: 55px;
-    padding: 10 30px 10px 0 ;
-}
+    /* margin-right: 55px; */
+/* padding: 10 30px 10px 0 ; }*/
 
+.form-control {
+  margin-bottom: 15px;
+  width: 100%;
+}
 
 .register-btn {
-    text-align: right;
+  text-align: right;
 }
 
-.register-btn button{
-    border: none;
-    border-radius: 30px;
-    padding: 9px 35px;
-    background-color: #132C33;
-    margin-top: 10px;
-    color: white;
-    
+.register-btn button {
+  border: none;
+  border-radius: 30px;
+  padding: 9px 35px;
+  background-color: #132c33;
+  margin-top: 10px;
+  color: white;
 }
 
-.register-btn .login-link{
-    font-weight: bold;
+.register-btn .login-link {
+  font-weight: bold;
 }
 
 /* Main footer  */
 
-footer{
-    background-color: #132C33;
-    padding: 15px 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color:#D8E3E7;
-    font-size: 12px;
-    margin-top: 15px;
-    width: 100%;
+footer {
+  background-color: #132c33;
+  padding: 15px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #d8e3e7;
+  font-size: 12px;
+  margin-top: 7vh;
+  width: 100%;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  text-align: center;
+  height: 7vh;
+}
+@media (max-width: 800px) {
+  #welcome,
+  #main-section {
+    flex-direction: column;
+  }
+  .hero-img {
+    display: none;
+  }
+  .main-image {
+    display: none;
+  }
+  body {
+    height: 100vh;
+    background: rgba(104, 5, 5, 0.514), url("../assets/mainImage.svg");
+  }
+  .welcome-hero h1 {
+    font-size: 2em;
+  }
 }
